Куча говна в вендоры (#371)
* Куча говна в вендоры

* fix

* Ноу пробел

* Еще 2 емаг прикола

* Минус хуйня

* Правки контрабанды

* Блять это пиздец

* Коммент фикс

* Фикс яиц

* Фикс 2

fucking fuck

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/shamblersjuice.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/shamblersjuice.yml
@@ -1,12 +1,15 @@
 - type: vendingMachineInventory
   id: ShamblersJuiceInventory
   startingInventory:
+    #WD edit start
     DrinkShamblersJuiceCan: 4
-    DrinkGrapeCan: 2
-    DrinkRootBeerCan: 2
-    DrinkIcedTeaCan: 2
-    DrinkLemonLimeCan: 2
-    DrinkFourteenLokoCan: 2
+    DrinkGrapeCan: 4
+    DrinkRootBeerCan: 4
+    DrinkIcedTeaCan: 4
+    DrinkLemonLimeCan: 4
+    DrinkDrGibbCan: 4
+    DrinkFourteenLokoCan: 4
+
   emaggedInventory:
     DrinkNukieCan: 2
-    DrinkChangelingStingCan: 2
+
