--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/bardrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/bardrobe.yml
@@ -4,16 +4,15 @@
     ClothingHeadHatBowlerHat: 2
     ClothingHeadHatTophat: 2
     ClothingEyesHudBeer: 2
-    ClothingEyesEyepatchHudBeer: 1
+    ClothingEyesGlassesSunglasses: 2 #WD edit
     ClothingHeadsetService: 2
-    ClothingOuterApronBar: 2
+    ClothingOuterArmorBasicSlim: 2 #WD edit
     ClothingOuterWinterBar: 2
-    ClothingUniformJumpsuitBartender: 2
-    ClothingUniformJumpskirtBartender: 2
-    ClothingUniformJumpsuitBartenderPurple: 2
-    ClothingShoesColorBlack: 2
-    ClothingOuterArmorBasicSlim: 2
-    ClothingOuterVest: 2
+    ClothingOuterVest: 2 #WD edit
+    ClothingUniformJumpsuitBartender: 2 #WD edit
+    ClothingUniformJumpskirtBartender: 2 #WD edit
+    ClothingUniformJumpsuitBartenderPurple: 2 #WD edit
     ClothingBeltBandolier: 2
-    ClothingEyesGlassesSunglasses: 2
-
+    ClothingShoesColorBlack: 2 #WD edit
+    ClothingEyesEyepatchHudBeer: 1
+    ClothingOuterApronBar: 2
