--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/chefvend.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/chefvend.yml
@@ -6,18 +6,23 @@
     ReagentContainerSugar: 2
     ReagentContainerRice: 2
     FoodCondimentPacketSalt: 4
+    FoodCondimentPacketPepper: 4 #WD edit
     FoodCondimentBottleEnzyme: 2
-    FoodCondimentBottleHotsauce: 1
-    FoodCondimentBottleKetchup: 1
-    FoodCondimentBottleBBQ: 1
+    FoodCondimentBottleHotsauce: 2 #WD edit
+    FoodCondimentBottleKetchup: 2 #WD edit
+    FoodCondimentBottleBBQ: 2 #WD edit
     FoodCondimentBottleVinegar: 2
     ReagentContainerOliveoil: 2
+    FoodContainerEgg: 2 #WD edit
+    ReagentContainerMilk: 3 #WD edit
+    ReagentContainerMilkSoy: 3 #WD edit
+    MonkeyCubeBox: 1
     ReagentContainerMayo: 1
     VariantCubeBox: 1
-    FoodContainerEgg: 1
     DrinkMilkCarton: 2
     DrinkSoyMilkCarton: 1
     FoodButter: 4
     FoodCheese: 1
     FoodMeat: 6
     Eftpos: 4
+
