--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/discount.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/discount.yml
@@ -1,9 +1,10 @@
 ﻿- type: vendingMachineInventory
   id: DiscountDansInventory
   startingInventory:
-    FoodSnackCheesie: 3
-    FoodSnackChips: 3
-    FoodSnackBoritos: 3
-    FoodSnackPopcorn: 3
-    FoodSnackEnergy: 3
-    CigPackMixed: 2
+    #WD edit start
+    FoodSnackCheesie: 4
+    FoodSnackChips: 4
+    FoodSnackBoritos: 4
+    FoodSnackPopcorn: 4
+    FoodSnackEnergy: 4
+    #WD edit end
