--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/medidrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/medidrobe.yml
@@ -4,18 +4,29 @@
     ClothingBackpackDuffelMedical: 4
     ClothingBackpackMedical: 4
     ClothingBackpackSatchelMedical: 4
+    ClothingHeadHelmetVoidParamed: 2 #WD edit
+    ClothingOuterHardsuitVoidParamed: 2 #WD edit
+    ClothingHeadHatBeretBrigmedic: 4 #WD edit
+    ClothingHeadNurseHat: 4
+    ClothingHeadHatParamedicsoft: 4 #WD edit
+    ClothingHeadsetMedical: 4 #WD edit
+    ClothingEyesHudMedical: 5 #WD edit
+    ClothingMaskSterile: 4 #WD edit
+    ClothingOuterWinterMed: 4 #WD edit
+    ClothingOuterWinterPara: 4 #WD edit
+    ClothingOuterCoatParamedicWB: 4 #WD edit
+    ClothingOuterCoatLab: 4
+    ClothingUniformJumpsuitParamedic: 4 #WD edit
+    ClothingUniformJumpskirtParamedic: 4 #WD edit
+    ClothingHandsGlovesLatex: 4
+    ClothingShoesColorWhite: 9 #WD edit
+    ClothingOuterHospitalGown: 5
+    UniformScrubsColorGreen: 5 #WD edit
+    UniformScrubsColorBlue: 5 #WD edit
+    UniformScrubsColorPurple: 5 #WD edit
     ClothingUniformJumpsuitMedicalDoctor: 4
     ClothingUniformJumpskirtMedicalDoctor: 4
     ClothingEyesEyepatchHudMedical: 1
     ClothingHeadHatBeretMedic: 4
-    ClothingHeadNurseHat: 4
-    ClothingOuterCoatLab: 4
-    ClothingShoesColorWhite: 4
-    ClothingHandsGlovesLatex: 4
-    ClothingHeadsetMedical: 4
-    ClothingOuterWinterMed: 2
-    ClothingOuterHospitalGown: 5
-    UniformScrubsColorGreen: 4
-    UniformScrubsColorBlue: 4
-    UniformScrubsColorPurple: 4
     ClothingShoesBootsWinterMed: 2
+
