--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
@@ -1,26 +1,29 @@
 - type: vendingMachineInventory
   id: SecTechInventory
   startingInventory:
-    SecurityWhistle: 5
     Handcuffs: 8
+    Zipties: 12 #WD edit
     GrenadeFlashBang: 4
-    TearGasGrenade: 4
-    ClusterBangFull: 2
-    GrenadeStinger: 4
-    Flash: 5
-    Tourniquet: 5
+    TearSmokeGrenade: 4
+    SmokeGrenade: 6 #WD edit
+    Flash: 7 #WD edit
+    Bola: 7 #WD edit
     FlashlightSeclite: 5
     ClothingEyesGlassesSunglasses: 2
-    ClothingEyesHudSecurity: 2
-    ClothingEyesEyepatchHudSecurity: 1
-    ClothingEyesGlassesSecurity: 4
     ClothingBeltSecurityWebbing: 5
-    Zipties: 12
     RiotShield: 2
     RiotLaserShield: 2
     RiotBulletShield: 2
-  # security officers need to follow a diet regimen!
+    SecurityWhistle: 5
+    TearGasGrenade: 4
+    ClusterBangFull: 2
+    GrenadeStinger: 4
+    Tourniquet: 5
+
   contrabandInventory:
     FoodDonutHomer: 12
     FoodBoxDonut: 2
-    #box evidence
+
+  emaggedInventory: #WD edit
+    ExGrenade: 1 #WD edit
+    Truncheon: 1 #WD edit
