--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/sovietsoda.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/sovietsoda.yml
@@ -1,6 +1,6 @@
 - type: vendingMachineInventory
   id: BodaInventory
   startingInventory:
-    DrinkSodaWaterCan: 10 #typically hacked product. Default product is "soda"
+    DrinkSodaWaterCan: 20 #WD edit
   contrabandInventory:
-    DrinkColaCan: 10
+    DrinkColaCan: 10 #WD edit
