--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/tankdispenser.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/tankdispenser.yml
@@ -1,8 +1,10 @@
 - type: vendingMachineInventory
   id: TankDispenserEVAInventory
   startingInventory:
-    OxygenTankFilled: 10
-    NitrogenTankFilled: 10
+    OxygenTankFilled: 7 #WD edit
+    EmergencyOxygenTankFilled: 10 #WD edit
+    ExtendedEmergencyOxygenTankFilled: 3 #WD edit
+    NitrogenTankFilled: 7 #WD edit
 
 - type: vendingMachineInventory
   id: TankDispenserEngineeringInventory
