--- a/Resources/Prototypes/Entities/Structures/Lighting/base_lighting.yml
+++ b/Resources/Prototypes/Entities/Structures/Lighting/base_lighting.yml
@@ -25,9 +25,12 @@
     sprite: Structures/Wallmounts/Lighting/light_tube.rsi
     drawdepth: WallMountedItems
     layers:
-    - state: on
-      map: ["enum.PoweredLightLayers.Base"]
-    state: on
+    - map: ["enum.PoweredLightLayers.Base"]
+      state: base
+    - map: ["enum.PoweredLightLayers.Glow"]
+      state: glow
+      shader: unshaded
+    state: base
   - type: PointLight
     color: "#FFE4CE" # 5000K color temp
     energy: 0.8
@@ -109,6 +112,12 @@
   - type: PoweredLightVisuals
     blinkingSound:
       path: "/Audio/Machines/light_tube_on.ogg"
+    spriteStateMap:
+      empty: empty
+      off: base
+      on: base
+      broken: broken
+      burned: burned
 
 - type: entity
   id: Poweredlight
@@ -117,7 +126,7 @@
   parent: PoweredlightEmpty
   components:
   - type: Sprite
-    state: off
+    state: base
   - type: PointLight
     enabled: true
   - type: PoweredLight
@@ -229,7 +238,7 @@
         path: /Audio/Ambience/Objects/light_hum.ogg
     - type: Sprite
       sprite: Structures/Wallmounts/Lighting/light_small.rsi
-      state: on
+      state: base
     - type: PointLight
       energy: 1.0
       radius: 6
@@ -293,6 +302,12 @@
     range: 200
   - type: Appearance
   - type: PoweredLightVisuals
+    spriteStateMap:
+      empty: empty
+      off: base
+      on: base
+      broken: broken
+      burned: burned
   - type: DeviceLinkSink
     ports:
       - On
@@ -324,7 +339,7 @@
   parent: PoweredSmallLightEmpty
   components:
   - type: Sprite
-    state: off
+    state: base
   - type: PointLight
     enabled: true
   - type: PoweredLight
