pAIs can now be inserted into plushies.

--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -52,6 +52,17 @@
         reagents:
         - ReagentId: Fiber
           Quantity: 10
+  - type: ItemSlots
+    slots:
+      item:
+        ejectSound:
+          collection: storageRustle
+        insertSound:
+          collection: storageRustle
+        #name: plushie-inserted-pai
+        whitelist:
+          components:
+          - PAI
 
 - type: entity
   parent: BasePlushie
