--- a/Resources/Prototypes/Recipes/Crafting/toys.yml
+++ b/Resources/Prototypes/Recipes/Crafting/toys.yml
@@ -23,3 +23,62 @@
   icon:
     sprite: Clothing/OuterClothing/Suits/iansuit.rsi
     state: icon
+
+- type: constructionGraph
+  id: PoppyFlowerBouquetCraft
+  start: start
+  graph:
+    - node: start
+      edges:
+        - to: PoppyBouquet
+          steps:
+            - tag: Flower
+              name: flower
+              icon:
+                sprite: Objects/Specific/Hydroponics/poppy.rsi
+                state: produce
+            - tag: Flower
+              name: flower
+              icon:
+                sprite: Objects/Specific/Hydroponics/poppy.rsi
+                state: produce
+            - tag: Flower
+              name: flower
+              icon:
+                sprite: Objects/Specific/Hydroponics/poppy.rsi
+                state: produce
+            - tag: Flower
+              name: flower
+              icon:
+                sprite: Objects/Specific/Hydroponics/poppy.rsi
+                state: produce
+            - tag: Flower
+              name: flower
+              icon:
+                sprite: Objects/Specific/Hydroponics/poppy.rsi
+                state: produce
+              doAfter: 10
+    - node: PoppyBouquet
+      entity: PoppyBouquet
+      edges:
+        - to: start
+          steps:
+            - tool: Cutting
+              doAfter: 10
+          completed:
+            - !type:SpawnPrototype
+              prototype: Flower
+              amount: 5
+            - !type:EmptyAllContainers
+            - !type:DeleteEntity
+
+- type: construction
+  name: PoppyBouquet
+  id: PoppyFlowerBouquetCraft
+  graph: PoppyFlowerBouquetCraft
+  startNode: start
+  targetNode: PoppyBouquet
+  category: construction-category-misc
+  description: A bouquet of the best flowers that you could grow. At least you tried...
+  icon: { sprite: Objects/Misc/poppybouquet.rsi, state: icon }
+  objectType: Item
