--- a/Resources/Prototypes/Recipes/Crafting/toys.yml
+++ b/Resources/Prototypes/Recipes/Crafting/toys.yml
@@ -58,3 +58,14 @@
                 sprite: Objects/Specific/Hydroponics/poppy.rsi
                 state: produce
               doAfter: 10
+
+- type: construction
+  name: PoppyBouquet
+  id: PoppyFlowerBouquetCraft
+  graph: PoppyFlowerBouquetCraft
+  startNode: start
+  targetNode: PoppyBouquet
+  category: construction-category-misc
+  description: A bouquet of the best flowers that you could grow. At least you tried...
+  icon: { sprite: Objects/Misc/poppybouquet.rsi, state: icon }
+  objectType: Item
