I hope. I done right

--- a/Resources/Prototypes/Entities/Objects/Misc/bouquet.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/bouquet.yml
@@ -11,3 +11,6 @@
   - type: Item
     size: Normal
     sprite: Objects/Misc/poppybouquet.rsi
+  - type: Construction
+    graph: PoppyFlowerBouquetCraft
+    node: PoppyBouquet
