--- a/Resources/Prototypes/Recipes/Crafting/Graphs/toys.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/toys.yml
@@ -38,7 +38,7 @@
     entity: ClothingOuterSuitIan
 
 - type: constructionGraph
-  id: PoppyFlowerBouquetCraft
+  id: PoppyBouquet
   start: start
   graph:
     - node: start
@@ -73,3 +73,5 @@
             - material: Cotton
               amount: 1
               doAfter: 10
+    - node: RoseBouquet
+      entity: PoppyBouquet
