--- a/Resources/Prototypes/Entities/Objects/Misc/bouquet.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/bouquet.yml
@@ -12,5 +12,5 @@
     size: Normal
     sprite: Objects/Misc/poppybouquet.rsi
   - type: Construction
-    graph: PoppyFlowerBouquetCraft
+    graph: PoppyBouquet
     node: PoppyBouquet
