кто прочитал, тот сдохнет. сделай 5 репостов чтобы выжить....

--- a/Resources/Prototypes/White/Objects/Scrolls/magic.yml
+++ b/Resources/Prototypes/White/Objects/Scrolls/magic.yml
@@ -103,7 +103,7 @@
     - type: PointLight
       radius: 1.5
       energy: 3.5
-      color: "#e5682d"
+      color: "#ce5a25"
       castShadows: false
 
 - type: entity
