--- a/Resources/Prototypes/Entities/White/mag-gloves.yml
+++ b/Resources/Prototypes/Entities/White/mag-gloves.yml
@@ -24,6 +24,8 @@
       fiberMaterial: fibers-nanomachines
     - type: FingerprintMask
     - type: MagneticGloves
+      glovesActiveTime: 60
+      glovesCooldown: 60
 
 - type: entity
   id: ClothingHandsGlovesMagneticAdvanced
