--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/bardrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/bardrobe.yml
@@ -4,15 +4,15 @@
     ClothingHeadHatBowlerHat: 2
     ClothingHeadHatTophat: 2
     ClothingEyesHudBeer: 2
-    ClothingEyesGlassesSunglasses: 2 #WD edit
+    ClothingEyesGlassesSunglasses: 2
     ClothingHeadsetService: 2
-    ClothingOuterArmorBasicSlim: 2 #WD edit
+    ClothingOuterArmorBasicSlim: 2
     ClothingOuterWinterBar: 2
-    ClothingOuterVest: 2 #WD edit
-    ClothingUniformJumpsuitBartender: 2 #WD edit
-    ClothingUniformJumpskirtBartender: 2 #WD edit
-    ClothingUniformJumpsuitBartenderPurple: 2 #WD edit
+    ClothingOuterVest: 2
+    ClothingUniformJumpsuitBartender: 2
+    ClothingUniformJumpskirtBartender: 2
+    ClothingUniformJumpsuitBartenderPurple: 2
     ClothingBeltBandolier: 2
-    ClothingShoesColorBlack: 2 #WD edit
+    ClothingShoesColorBlack: 2
     ClothingEyesEyepatchHudBeer: 1
     ClothingOuterApronBar: 2
