--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/chefdrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/chefdrobe.yml
@@ -2,10 +2,10 @@
   id: ChefDrobeInventory
   startingInventory:
     ClothingHeadsetService: 2
-    ClothingOuterApronChef: 2 #WD edit
+    ClothingOuterApronChef: 2
     ClothingOuterWinterChef: 2
-    ClothingOuterJacketChef: 2 #WD edit
-    ClothingUniformJumpsuitChef: 2 #WD edit
+    ClothingOuterJacketChef: 2
+    ClothingUniformJumpsuitChef: 2
     ClothingMaskItalianMoustache: 2
     ClothingUniformJumpskirtChef:  2
     ClothingHeadHatChef: 2
