--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/chefvend.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/chefvend.yml
@@ -6,16 +6,16 @@
     ReagentContainerSugar: 2
     ReagentContainerRice: 2
     FoodCondimentPacketSalt: 4
-    FoodCondimentPacketPepper: 4 #WD edit
+    FoodCondimentPacketPepper: 4
     FoodCondimentBottleEnzyme: 2
-    FoodCondimentBottleHotsauce: 2 #WD edit
-    FoodCondimentBottleKetchup: 2 #WD edit
-    FoodCondimentBottleBBQ: 2 #WD edit
+    FoodCondimentBottleHotsauce: 2
+    FoodCondimentBottleKetchup: 2
+    FoodCondimentBottleBBQ: 2
     FoodCondimentBottleVinegar: 2
     ReagentContainerOliveoil: 2
-    FoodContainerEgg: 2 #WD edit
-    ReagentContainerMilk: 3 #WD edit
-    ReagentContainerMilkSoy: 3 #WD edit
+    FoodContainerEgg: 2
+    ReagentContainerMilk: 3
+    ReagentContainerMilkSoy: 3
     MonkeyCubeBox: 1
     ReagentContainerMayo: 1
     VariantCubeBox: 1
