--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/cigs.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/cigs.yml
@@ -1,19 +1,19 @@
 - type: vendingMachineInventory
   id: CigaretteMachineInventory
   startingInventory:
-    CigPackGreen: 3 #WD edit
-    CigPackRed: 3 #WD edit
-    CigPackBlue: 3 #WD edit
-    CigPackBlack: 3 #WD edit
+    CigPackGreen: 3
+    CigPackRed: 3
+    CigPackBlue: 3
+    CigPackBlack: 3
     CigarCase: 1
-    SmokingPipeFilledTobacco: 3 #WD edit
+    SmokingPipeFilledTobacco: 3
     Vape: 1
     Matchbox: 5
     PackPaperRollingFilters: 3
-    CheapLighter: 5 #WD edit
-    Lighter: 2 #WD edit
+    CheapLighter: 5
+    Lighter: 2
     CigPackMixed: 2
     FlippoLighter: 2
 
   emaggedInventory:
-    CigPackSyndicate: 2 #WD edit
+    CigPackSyndicate: 2
