--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/engivend.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/engivend.yml
@@ -7,8 +7,8 @@
     NetworkConfigurator: 5
     PowerCellMedium: 5
     ClothingHandsGlovesColorYellow: 6
-    HolofanProjector: 5 #WD edit
-    trayScanner: 5 #WD edit
-    GeigerCounter: 5 #WD edit
+    HolofanProjector: 5
+    trayScanner: 5
+    GeigerCounter: 5
     InflatableWallStack1: 24
     InflatableDoorStack1: 8
