--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/games.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/games.yml
@@ -16,5 +16,5 @@
     PaperCNCSheet: 6
     MysteryFigureBox: 2
     BooksBag: 3
-  emaggedInventory: #WD edit
-    BalloonSyn: 3 #WD edit
+  emaggedInventory:
+    BalloonSyn: 3
