--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
@@ -5,12 +5,12 @@
     Brutepack: 5
     Ointment: 5
     Bloodpack: 5
-    Gauze: 5 #WD edit
+    Gauze: 5
     EpinephrineChemistryBottle: 3
     Syringe: 5
-    EmergencyMedipen: 2 #WD edit
-    SyringeBicaridine: 1 #WD edit
-    SyringeDermaline: 1 #WD edit
-    Eftpos: 2 #WD edit
+    EmergencyMedipen: 2
+    SyringeBicaridine: 1
+    SyringeDermaline: 1
+    Eftpos: 2
   emaggedInventory:
-    SyringeEphedrine: 1 #WD edit
+    SyringeEphedrine: 1
