--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/nutri.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/nutri.yml
@@ -1,24 +1,22 @@
 - type: vendingMachineInventory
   id: NutriMaxInventory
   startingInventory:
-    #WD edit start
     HydroponicsToolSpade: 4
     HydroponicsToolMiniHoe: 4
     HydroponicsToolClippers: 4
     HydroponicsToolScythe: 4
     HydroponicsToolHatchet: 4
     PlantBag: 4
-    #WD edit end
     PlantBGoneSpray: 20
     WeedSpray: 20
     PestSpray: 20
     Syringe: 5
     RobustHarvestChemistryBottle: 5
-    Bucket: 5 #WD edit
-    DiseaseSwab: 20 #WD edit
+    Bucket: 5
+    DiseaseSwab: 20
     HandheldSeedAnalyzer: 4
     EZNutrientChemistryBottle: 3
-    Eftpos: 4 #WD edit
+    Eftpos: 4
 
   emaggedInventory:
     Left4ZedChemistryBottle: 1
