--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/seeds.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/seeds.yml
@@ -1,8 +1,8 @@
 - type: vendingMachineInventory
   id: MegaSeedServitorInventory
   startingInventory:
-    AloeSeeds: 5 #WD edit
-    AmbrosiaVulgarisSeeds: 5 #WD edit
+    AloeSeeds: 5
+    AmbrosiaVulgarisSeeds: 5
     AppleSeeds: 5
     BananaSeeds: 5
     CarrotSeeds: 5
@@ -12,8 +12,8 @@
     CornSeeds: 5
     EggplantSeeds: 5
     EggySeeds: 5
-    GalaxythistleSeeds: 5 #WD edit
-    GarlicSeeds: 5 #WD edit
+    GalaxythistleSeeds: 5
+    GarlicSeeds: 5
     GrapeSeeds: 5
     LemonSeeds: 5
     LimeSeeds: 5
@@ -22,7 +22,7 @@
     OnionSeeds: 5
     OnionRedSeeds: 5
     OrangeSeeds: 5
-    PoppySeeds: 5 #WD edit
+    PoppySeeds: 5
     PotatoSeeds: 5
     RiceSeeds: 5
     SoybeanSeeds: 5
