--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/tankdispenser.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/tankdispenser.yml
@@ -1,10 +1,10 @@
 - type: vendingMachineInventory
   id: TankDispenserEVAInventory
   startingInventory:
-    OxygenTankFilled: 7 #WD edit
-    EmergencyOxygenTankFilled: 10 #WD edit
-    ExtendedEmergencyOxygenTankFilled: 3 #WD edit
-    NitrogenTankFilled: 7 #WD edit
+    OxygenTankFilled: 7
+    EmergencyOxygenTankFilled: 10
+    ExtendedEmergencyOxygenTankFilled: 3
+    NitrogenTankFilled: 7
 
 - type: vendingMachineInventory
   id: TankDispenserEngineeringInventory
