--- a/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
@@ -13,6 +13,7 @@
       - id: ClothingUniformJumpskirtCapFormalDress
       - id: ClothingHandsGlovesCaptain
       - id: ClothingNeckMantleCap
+      - id: ClothingEyesGlassesSunglasses
 
 - type: entity
   id: DresserChiefEngineerFilled
@@ -50,6 +51,7 @@
       - id: ClothingNeckCloakHop
       - id: ClothingHeadHatHopcap
       - id: ClothingOuterWinterHoP
+      - id: ClothingHandsGlovesHop
 
 - type: entity
   id: DresserHeadOfSecurityFilled
@@ -67,6 +69,7 @@
       - id: ClothingUniformJumpskirtHosFormal
       - id: ClothingUniformJumpsuitHosFormal
       - id: ClothingMaskNeckGaiter
+      - id: ClothingHandsGlovesCombat
 
 - type: entity
   id: DresserQuarterMasterFilled
