--- a/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
@@ -119,11 +119,15 @@
       - id: BoxBottle
       - id: BoxVial
       - id: ChemBag
+        amount: 3
       - id: ClothingHandsGlovesLatex
+        amount: 3
       - id: ClothingHeadsetMedical
+        amount: 3
       - id: ClothingMaskSterile
+        amount: 3
       - id: HandLabeler
-        prob: 0.5
+        amount: 3
       - id: Eftpos
 
 - type: entity
