- tweak: Tweak chemical regeneration and chemical costs.

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -173,6 +173,7 @@
       damageCoefficient: 0.9
     - type: Unremoveable
       deleteOnDrop: true
+    - type: ClothingModifyChemicalRegen
 
 - type: entity
   parent: ClothingOuterArmorHeavy
