- add: Add chitinous helmet.

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -171,6 +171,7 @@
           Heat: 0.5
     - type: ExplosionResistance
       damageCoefficient: 0.9
+    - type: GroupExamine
     - type: Unremoveable
       deleteOnDrop: true
     - type: ClothingModifyChemicalRegen
