--- a/Resources/Prototypes/Entities/Objects/Shields/shields.yml
+++ b/Resources/Prototypes/Entities/Objects/Shields/shields.yml
@@ -143,6 +143,7 @@
           Piercing: 1.5
     - type: Unremoveable
       deleteOnDrop: true
+    - type: DeleteOnChangelingRefund
     - type: Destructible
       thresholds:
         - trigger:
