--- a/Resources/Maps/Test/dev_map.yml
+++ b/Resources/Maps/Test/dev_map.yml
@@ -376,7 +376,7 @@ entities:
     - type: GasTileOverlay
     - type: BecomesStation
       id: Dev
-    - type: MaterialStorageComponent
+    - type: MaterialStorage
     - type: SpreaderGrid
     - type: GridPathfinding
     - type: NavMap
