- tweak: Better summoning and Narsie

--- a/Resources/Prototypes/_White/narsie.yml
+++ b/Resources/Prototypes/_White/narsie.yml
@@ -1,7 +1,20 @@
-﻿- type: entity
+- type: entity
   id: Narsie
+  parent: BaseMob
   name: Nar'si
   components:
+  - type: AnnounceOnSpawn
+    message: narsie-has-risen
+    sender: narsie-has-risen-sender
+    sound:
+      path: /Audio/Misc/narsie_rises.ogg
+    color: darkred
+  - type: CargoSellBlacklist
+  - type: ContentEye
+    maxZoom: 2.0,2.0
+  - type: WarpPoint
+    follow: true
+    location: Nar'Sie
   - type: Sprite
     layers:
       - map: [ "enum.NarsieLayer.Default" ]
@@ -15,6 +28,8 @@
   - type: Narsie
   - type: Physics
     bodyType: Dynamic
+    bodyStatus: InAir
+  - type: CanMoveInAir
   - type: Fixtures
     fixtures:
       Penis:
