--- a/Resources/Prototypes/_White/Entities/Cult/Runes/cult_runes.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Runes/cult_runes.yml
@@ -155,4 +155,5 @@
   - type: Appearance
   - type: CultRuneBase
     invokePhrase: "TOK-LYR RQA-NAP G'OLT-ULOFT!"
+    cultistGatheringRange: 1.5
   - type: CultRuneApocalypse
