- tweak: Construct update.

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -87,6 +87,7 @@
   - type: IgnoreUIRange
   - type: ShowRevIcons
   - type: ShowZombieIcons
+  - type: ShowCultHud
   - type: Inventory
     templateId: aghost
   - type: InventorySlots
