--- a/Resources/Prototypes/_White/Entities/Cult/constructs.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/constructs.yml
@@ -60,6 +60,17 @@
     - type: Pullable
     - type: ContentEye
     - type: Actions
+    - type: Hands
+    - type: ShowCultHud
+    - type: NightVision
+      toggleSound: null
+      color: White
+    - type: ShowWhiteHealthBars
+      damageContainers:
+      - Biological
+    - type: ShowHealthIcons
+      damageContainers:
+      - Biological
     - type: Tag
       tags:
         - CannotSuicide
@@ -77,17 +88,15 @@
       thresholds:
         0: Alive
         150: Dead
-    - type: MovementSpeedModifier
-      baseWalkSpeed: 2
-      baseSprintSpeed: 2
     - type: Construct
       actions:
       - InstantActionJuggernautCreateWall
     - type: MeleeWeapon
+      canHeavyAttack: false
       hidden: true
       angle: 30
-      animation: WeaponArcFist
-      attackRate: 0.25
+      animation: WeaponArcSmash
+      attackRate: 1
       damage:
         types:
           Structural: 90
@@ -114,13 +123,17 @@
           InstantActionArtificerCreateCultistWall,
           InstantActionArtificerCreateCultistAirlock,
         ]
+    - type: MovementSpeedModifier
+      baseWalkSpeed: 3
+      baseSprintSpeed: 3
     - type: Puller
       needsHands: false
     - type: MeleeWeapon
+      canHeavyAttack: false
       hidden: true
       angle: 30
-      animation: WeaponArcFist
-      attackRate: 0.85
+      animation: WeaponArcPunch
+      attackRate: 1
       damage:
         types:
           Blunt: 5
@@ -133,8 +146,8 @@
   description: run...
   components:
     - type: MovementSpeedModifier
-      baseWalkSpeed: 3.0
-      baseSprintSpeed: 3.0
+      baseWalkSpeed: 4.0
+      baseSprintSpeed: 4.0
     - type: MobThresholds
       thresholds:
         0: Alive
@@ -148,14 +161,16 @@
       actions: [InstantActionWraithPhase]
     - type: MovementIgnoreGravity
     - type: MeleeWeapon
+      canHeavyAttack: false
       hidden: true
       angle: 30
-      animation: WeaponArcFist
-      attackRate: 0.5
+      animation: WeaponArcPunch
+      attackRate: 1
       damage:
         types:
           Blunt: 10
           Slash: 10
+          Structural: 40
 
 - type: entity
   id: ReaperConstruct
@@ -165,8 +180,8 @@
   components:
     - type: MovementIgnoreGravity
     - type: MovementSpeedModifier
-      baseWalkSpeed: 3.0
-      baseSprintSpeed: 3.0
+      baseWalkSpeed: 5.0
+      baseSprintSpeed: 5.0
     - type: MobThresholds
       thresholds:
         0: Alive
@@ -176,10 +191,11 @@
     - type: Puller
       needsHands: false
     - type: MeleeWeapon
+      canHeavyAttack: false
       hidden: true
       angle: 30
-      animation: WeaponArcFist
-      attackRate: 0.9
+      animation: WeaponArcPunch
+      attackRate: 1
       damage:
         types:
           Blunt: 20
