- fix: No rune drawing using fingers.

--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/cult.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/cult.yml
@@ -35,6 +35,10 @@
                       SummoningRune,
                       BloodBoilRune,
                       ApocalypseRune ]
+  - type: ActivatableUI
+    key: enum.ListViewSelectorUiKey.Key
+    inHandsOnly: true
+    closeOnHandDeselect: true
   - type: UserInterface
     interfaces:
       - key: enum.ListViewSelectorUiKey.Key
