- add: Ritoka fluff.

--- a/Resources/Prototypes/White/Fluff/sponsor.yml
+++ b/Resources/Prototypes/White/Fluff/sponsor.yml
@@ -467,3 +467,9 @@
   id: JoulerkPlushie
   entity: PlushieLerkFluff
   sponsorOnly: true
+
+# Ritoka
+- type: loadout
+  id: RitokaCloak
+  entity: ClothingOuterCloakRitoka
+  sponsorOnly: true
