add: all standart maps support

--- a/Resources/Maps/Test/empty.yml
+++ b/Resources/Maps/Test/empty.yml
@@ -29,6 +29,7 @@ entities:
       fixtures: {}
     - type: BecomesStation
       id: Empty
+    - type: MaterialStorage
     - type: OccluderTree
     - type: Shuttle
     - type: GridPathfinding
