--- a/Resources/Maps/Test/test_teg.yml
+++ b/Resources/Maps/Test/test_teg.yml
@@ -241,6 +241,7 @@ entities:
     - type: RadiationGridResistance
     - type: BecomesStation
       id: TEG
+    - type: MaterialStorage
 - proto: AirAlarm
   entities:
   - uid: 436
