--- a/Resources/Maps/meta.yml
+++ b/Resources/Maps/meta.yml
@@ -8197,6 +8197,7 @@ entities:
         chunkSize: 4
     - type: BecomesStation
       id: Meta
+    - type: MaterialStorage
     - type: OccluderTree
     - type: Shuttle
     - type: GasTileOverlay
